[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 02.png" type="Texture" id=1]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 01.png" type="Texture" id=2]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 04.png" type="Texture" id=3]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 05.png" type="Texture" id=4]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 03.png" type="Texture" id=5]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/02-Run/Run 06.png" type="Texture" id=6]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 03.png" type="Texture" id=7]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 01.png" type="Texture" id=8]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 07.png" type="Texture" id=9]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 04.png" type="Texture" id=10]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 04.png" type="Texture" id=11]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 03.png" type="Texture" id=12]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 05.png" type="Texture" id=13]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 08.png" type="Texture" id=14]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 02.png" type="Texture" id=15]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 02.png" type="Texture" id=16]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/08-Hit/Hit 01.png" type="Texture" id=17]
[ext_resource path="res://Assets/The Crusty Crew/Sprites/Fierce Tooth/01-Idle/Idle 06.png" type="Texture" id=18]
[ext_resource path="res://Scripts/Crab.gd" type="Script" id=20]
[ext_resource path="res://Scenes/hitbox.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 8 )

[node name="Shark2" type="KinematicBody2D"]
position = Vector2( 0, -13 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 20 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 5 )
shape = SubResource( 2 )

[node name="ray_wall" type="RayCast2D" parent="."]
position = Vector2( 1, 0 )
enabled = true
cast_to = Vector2( -27, 0 )
collision_mask = 8

[node name="hitbox" parent="." instance=ExtResource( 21 )]
modulate = Color( 0.34902, 0.968627, 0.00392157, 1 )
position = Vector2( 0, -8 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]

[editable path="hitbox"]
